fixed spacing

--- a/frontend/src/components/app-home/app-home.scss
+++ b/frontend/src/components/app-home/app-home.scss
@@ -138,6 +138,10 @@ input#newsletter-mail {
   opacity: 1;
 }
 
+.lastest-posts {
+  padding: 0 0 100px 0;
+}
+
 .newsletter-section {
   display: flex;
   flex-direction: row;
